<resources>
    <string name="login">Ingresar</string>
    <string name="registrar_usuario">Crear Cuenta</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="app_name">Estilo_Al_Paso_App</string>
    <string name="registrar_cliente">Registar Cliente</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="dni">DNI</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="ciudad">Ciudad</string>
    <string name="boton_registrar_cliente">Registrar Cliente</string>
</resources>