<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center_vertical"
            android:background="?attr/colorSurface"
            android:elevation="4dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/estilo_al_paso_logo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:text="@string/registrar_cliente"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <!-- Formulario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Nombre -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rgsNombreCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_completo"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/dorado"
                app:hintTextColor="@color/dorado"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- DNI -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rgsDniCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/dni"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/dorado"
                app:hintTextColor="@color/dorado"
                android:paddingTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Teléfono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rgsTelefCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/telefono"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/dorado"
                app:hintTextColor="@color/dorado"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Dirección -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rgsDireccCli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/direccion"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/dorado"
                app:hintTextColor="@color/dorado"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ciudad"
                android:layout_marginTop="20dp"
                android:textColor="@color/gris_claro"
                android:textSize="16dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"/>

            <RadioGroup
                android:id="@+id/radioCiudadGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioTrujillo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Trujillo"
                    android:textColor="@color/white"
                    android:layout_marginEnd="30dp"/>

                <RadioButton
                    android:id="@+id/radioOtro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Otro"
                    android:textColor="@color/white"/>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rgsCiudadOtroLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="Escribe la ciudad"
                app:boxStrokeColor="@color/dorado"
                app:hintTextColor="@color/dorado"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rgsCiudadOtroInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón Registrar -->
            <Button
                android:id="@+id/btnRegistrarCliente"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/dorado"
                android:text="@string/boton_registrar_cliente"
                android:textColor="@android:color/white"
                app:cornerRadius="12dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
